--- a/force-app/main/default/lwc/agentforceProcessMap/agentforceProcessMap.html
+++ b/force-app/main/default/lwc/agentforceProcessMap/agentforceProcessMap.html
@@ -64,7 +64,7 @@
                                 <span class="bizcard__name">{rec.name}</span>
                             </div>
                             <div class="bizcard__body">
-                                <div class="bizcard__row">
+                                <!-- <div class="bizcard__row">
                                     <span class="bizcard__label">ビジネスプロセス:</span>
                                     <span class="bizcard__value">{rec.businessProcess}</span>
                                 </div>
@@ -75,13 +75,17 @@
                                 <div class="bizcard__row">
                                     <span class="bizcard__label">実現性:</span>
                                     <span class="bizcard__value">{rec.feasibility}</span>
+                                </div> -->
+                                <div class="bizcard__row">
+                                    <span class="bizcard__label">ターゲット:</span>
+                                    <span class="bizcard__value">{rec.target}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">Pain:</span>
+                                    <span class="bizcard__label">ビジネス課題:</span>
                                     <span class="bizcard__value">{rec.pain}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">役割:</span>
+                                    <span class="bizcard__label">エージェント役割:</span>
                                     <span class="bizcard__value">{rec.agentRole}</span>
                                 </div>
                             </div>
@@ -107,7 +111,7 @@
                                 <span class="bizcard__name">{rec.name}</span>
                             </div>
                             <div class="bizcard__body">
-                                <div class="bizcard__row">
+                                <!-- <div class="bizcard__row">
                                     <span class="bizcard__label">ビジネスプロセス:</span>
                                     <span class="bizcard__value">{rec.businessProcess}</span>
                                 </div>
@@ -118,13 +122,17 @@
                                 <div class="bizcard__row">
                                     <span class="bizcard__label">実現性:</span>
                                     <span class="bizcard__value">{rec.feasibility}</span>
+                                </div> -->
+                                <div class="bizcard__row">
+                                    <span class="bizcard__label">ターゲット:</span>
+                                    <span class="bizcard__value">{rec.target}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">Pain:</span>
+                                    <span class="bizcard__label">ビジネス課題:</span>
                                     <span class="bizcard__value">{rec.pain}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">役割:</span>
+                                    <span class="bizcard__label">エージェント役割:</span>
                                     <span class="bizcard__value">{rec.agentRole}</span>
                                 </div>
                             </div>
@@ -150,7 +158,7 @@
                                 <span class="bizcard__name">{rec.name}</span>
                             </div>
                             <div class="bizcard__body">
-                                <div class="bizcard__row">
+                                <!-- <div class="bizcard__row">
                                     <span class="bizcard__label">ビジネスプロセス:</span>
                                     <span class="bizcard__value">{rec.businessProcess}</span>
                                 </div>
@@ -161,13 +169,17 @@
                                 <div class="bizcard__row">
                                     <span class="bizcard__label">実現性:</span>
                                     <span class="bizcard__value">{rec.feasibility}</span>
+                                </div> -->
+                                <div class="bizcard__row">
+                                    <span class="bizcard__label">ターゲット:</span>
+                                    <span class="bizcard__value">{rec.target}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">Pain:</span>
+                                    <span class="bizcard__label">ビジネス課題:</span>
                                     <span class="bizcard__value">{rec.pain}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">役割:</span>
+                                    <span class="bizcard__label">エージェント役割:</span>
                                     <span class="bizcard__value">{rec.agentRole}</span>
                                 </div>
                             </div>
@@ -193,7 +205,7 @@
                                 <span class="bizcard__name">{rec.name}</span>
                             </div>
                             <div class="bizcard__body">
-                                <div class="bizcard__row">
+                                <!-- <div class="bizcard__row">
                                     <span class="bizcard__label">ビジネスプロセス:</span>
                                     <span class="bizcard__value">{rec.businessProcess}</span>
                                 </div>
@@ -204,13 +216,17 @@
                                 <div class="bizcard__row">
                                     <span class="bizcard__label">実現性:</span>
                                     <span class="bizcard__value">{rec.feasibility}</span>
+                                </div> -->
+                                <div class="bizcard__row">
+                                    <span class="bizcard__label">ターゲット:</span>
+                                    <span class="bizcard__value">{rec.target}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">Pain:</span>
+                                    <span class="bizcard__label">ビジネス課題:</span>
                                     <span class="bizcard__value">{rec.pain}</span>
                                 </div>
                                 <div class="bizcard__row">
-                                    <span class="bizcard__label">役割:</span>
+                                    <span class="bizcard__label">エージェント役割:</span>
                                     <span class="bizcard__value">{rec.agentRole}</span>
                                 </div>
                             </div>
